--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blake-whihtam/react-terminal",
-  "version": "v1.1.0",
+  "version": "1.2.0",
   "description": "React component that renders a terminal",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
